<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="base_amount">Base Amount</string>
    <string name="tip_percent">Tip %</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip: $0.00</string>
    <string name="total_amount">Total: $0.00</string>
    <string name="tip_amount_format">Tip: %s</string>
    <string name="total_amount_format">Total: %s</string>
</resources>
